[tool.poetry]
name = "src"
version = "0.0.1.dev"
description = "Test API"
authors = [
    "Labanau Nikita <python.dev.back@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
httpx = "^0.27.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8-pyproject = "^1.2.3"

[tool.flake8]
exclude = ['tests', 'venv', '.venv', 'deploy', 'tmp_*.py']
ignore = ['W503', 'E203', 'C901']
max-complexity = 10
max-line-length = 120

[tool.black]
line-length = 90
target-version = ['py39', 'py310']
include = '\.pyi?$'
skip_magic_trailing_comma = true
